--- a/wish.html
+++ b/wish.html
@@ -123,7 +123,14 @@
         let disc = document.querySelector('.disc');
 
         var letter = [
-            `Thank you for being a part of my 2023 this year, I'll be looking forward to embarking on my journey with you. I know it won't be easy for either of us, but I know we can manage whatever comes our way. You are the best thing that ever happened to me, and I want you to know that all of my efforts are for you and only you; don't worry, I won't change, You don't have to please me with anything else since I'll gladly do everything for you. Every day I desire for nothing except you. and the love of my life. Our journey together is just beginning, and I can't wait to see where it takes us. Here's to a future filled with love, happiness, and endless possibilities. You are the inspiration behind every beautiful thought that graces my mind and the source of the smile that graces my lips. Your presence in my life is the most precious gift I've ever received, and I pledge to treasure you eternally. When I peer into your eyes, I see the depth of your affection for me. Occasionally, I ponder if I'm truly worthy of your love. The way you regard me is both comforting and mesmerizing, often rendering me speechless. Thank you for eternally showering me with love. I can't help but smile as I write this letter. Your love is like a gentle breeze that brings calmness to my life. Your kindness, your support, and your unwavering belief in me mean the world to me. I love you more than words can express, and I look forward to every moment we spend together.`
+            `We never know what will happen tomorrow. So, when you found yourself still have a chance to wake up from your sleep and breathing fine, lets try to live well. No matter how hard things would come and ruin your day, I hope you'll find the way to get through it and spend the day with all positive things. 
+
+Life may hurt but keep going because their are better days ahead:). Learn to rest and don't pressure yourself too much you've done a great job. Always remember that your feelings are valid its because you're still in the process of make yourself better and planning your future, But I know one day you'll live the life I've always prayed for. 
+
+Maybe you've not noticed but... 8 billions of people experienced today in a different way, and you're the one of them. Someone might be at the end of life, while someone is at the beginning of it, someone had the best of their life, while someone had the worst although life is tough you're still here. Trying:) keep moving forward always love, I'm always here to support you. Always remember that I'm proud of you that you've made it this far, never give up. I'm always rooting for you. 
+
+Mananatili ako. Sa mga araw na puno ng ngiti at higit sa mga araw na mahirap at Hindi tayo mag kaintindihan. Sa mga araw ng tagumpay at higit sa araw ng kabiguan. At kung maubos man ang Araw, mananatili parin ako sa tabi mo. Mahal kita sa bawat araw na lumipas:) 
+`
         ];
 
         var data = document.querySelector('.data');
