--- a/decision.html
+++ b/decision.html
@@ -92,7 +92,7 @@
 <body>
     <div class="container">
         <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" id="happy" alt="">
-        <h1 id="txt">Do you want to read?</h1>
+        <h1 id="txt">Do you want to read this?</h1>
     </div>
     
     <div class="container-sm">
